--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
                     <div class="card mb-3" data-aos="flip-right">
                         <img class="img-fluid p-2" src="./img/APIPOKE.JPG" alt="">
                         <div class="card-body">
-                            <h1>Proyecto consumiendo API de Pokémon</h1>
-                            <p>Proyecto en el cual se consume una Api, la cual obtiene los personajes de la serie animada Pokemón.</p>
+                            <h1 class="text-uppercase">Proyecto consumiendo API de Pokémon</h1>
+                            <p class="text-uppercase">Proyecto en el cual se consume una Api, la cual obtiene los personajes de la serie animada Pokemón.</p>
 
-                            <h2>Tecnologías utilizadas</h2>
+                            <h2 class="text-uppercase">Tecnologías utilizadas</h2>
                             <ul>
                                 <li><code>Javascript</code></li>
                                 <li><code>CSS3</code></li>
@@ -241,10 +241,10 @@
                     <div class="card mb-3 " data-aos="flip-left">
                         <img class="img-fluid p-2" src="./img/kjs.JPG" alt="">
                         <div class="card-body">
-                            <h1>Proyecto carrito de compras</h1>
-                            <p>Pryecto que simula un carrito de compras (v 1.0). OBS: no realiza suma de totales</p>
+                            <h1 class="text-uppercase">Proyecto carrito de compras</h1>
+                            <p class="text-uppercase">Pryecto que simula un carrito de compras (v 1.0). OBS: no realiza suma de totales</p>
 
-                            <h2>Tecnologías utilizadas</h2>
+                            <h2 class="text-uppercase">Tecnologías utilizadas</h2>
                             <ul>
                                 <li><code>Javascript</code></li>
                                 <li><code>CSS3</code></li>
@@ -278,10 +278,10 @@
                     <div class="card" data-aos="flip-right">
                         <img class="img-fluid p-2" src="./img/viaje.JPG" alt="">
                         <div class="card-body">
-                            <h1>Proyecto Agencia de Viajes</h1>
-                            <p>Proyecto sobre agencia de viajes donde se muestran pasajes precios.</p>
+                            <h1 class="text-uppercase">Proyecto Agencia de Viajes</h1>
+                            <p class="text-uppercase">Proyecto sobre agencia de viajes donde se muestran pasajes precios.</p>
 
-                            <h2>Tecnologías utilizadas</h2>
+                            <h2 class="text-uppercase">Tecnologías utilizadas</h2>
                             <ul>
                                 <li><code>Javascript</code></li>
                                 <li><code>PUG</code></li>
