--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
                                 <li><code>CSS3</code></li>
                                 <li><code>HTML5</code></li>
                             </ul>
-                            <h2>Funcionalidades</h2>
+                            <h2 class="text-uppercase">Funcionalidades</h2>
                             <ul>
                                 <li><code>Agrega Productos al Carrito</code></li>
                                 <li><code>Elimina Productos del Carrito</code></li>
@@ -288,7 +288,7 @@
                                 <li><code>MYSQL</code></li>
                                 <li><code>NodeJS</code></li>
                             </ul>
-                            <h2>Funcionalidades</h2>
+                            <h2 class="text-uppercase">Funcionalidades</h2>
                             <ul>
                                 <li><code>Agrega Testimonios mediante un formulario</code></li>
                             </ul>         
