--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="row g-0 px-4 mb-4 portafolio ">
                 <h2 id="proyectos" class="titulo text-center text-uppercase py-5">Proyectos</h2>
                 <div class="col-12 g-0 col-sm-12 col-md-12 col-lg-12 mb-3">
-                    <div class="card mb-3" data-aos="flip-right">
+                    <div class="card mb-3 mt-3" data-aos="flip-right">
                         <img class="img-fluid p-2" src="./img/APIPOKE.JPG" alt="">
                         <div class="card-body">
                             <h1 class="text-uppercase">Proyecto consumiendo API de Pokémon</h1>
