Modificación del CV
Se modifica el CV

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 <div class="col-12 col-lg-8 info">
                     <h2 id="sobre-mi" class="titulo text-center text-uppercase text-lg-start">Sobre Mi</h2>
                     <p class="resumen">
-                        Mi nombre es Gerardo Vega, tengo 32 años, soy Ingeniero en Informática (DUOC UC). Me gusta mucho investigar acerca de las nuevas tecnologías, mi foco principal es el desarrollo Front-End. 
+                        Mi nombre es Gerardo Vega, tengo 32 años, soy Ingeniero en Informática (DUOC UC). Me gusta mucho investigar acerca de las nuevas tecnologías, mi foco principal es el desarrollo web Front-End. 
                         Siempre busco nuevos desafíos en los cuales pueda crecer de manera profesional y personal. 
                         Dentro de mis competencias puedo destacar que soy proactivo, habilidad para trabajar en equipo, analítico, organizado, con actitud positiva, orientado al logro de metas y aprendizaje contínuo.
                     </p>
@@ -327,8 +327,6 @@
         </div>
     </footer>
 
-    
-    
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/bootstrap.bundle.min.js"></script>
     <script src="./js/app.js"></script>
